keyboard: Also search shortcut accelerators

When managing the keyboard shortcuts, the user might want
to check for keybindings based on their accelerators, not
only their names. Currently, however, the Keyboard panel
only supports searching for the keybinding description.

Fix that by also considering the normalized keybinding
accelerator when performing the search.

https://bugzilla.gnome.org/show_bug.cgi?id=772565